<resources>
    <string name="app_name">NGV247</string>
    <string name="home_home">Home</string>
    <string name="home_maid_around">Nearby workers</string>
    <string name="home_your_tasks">Work management</string>
    <string name="home_history">Work history</string>
    <string name="home_copy_right">Any Time - Any Where</string>
    <string name="more_sign_in">Sign in</string>
    <string name="auth">You account has been logged into from a new device</string>
    <string name="home_error_type_job">Failed to download now the data type of work!</string>
    <string name="terms">Terms of use</string>
    <string name="terms_btn_ok">OK</string>
    <string name="content_null">No content</string>
    <string name="sign_in_user_name">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_sign_in">Sign in</string>
    <string name="sign_in_forget_password">Forgot password?</string>
    <string name="sign_in_sign_now">Sign up</string>
    <string name="sign_in_by">Login with</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_invalid_username">Account is too short.</string>
    <string name="sign_up_invalid_password">Password is too short</string>
    <string name="sign_up_invalid_usernameandpassword">Account and password are too short</string>
    <string name="work_management">Work management</string>
    <string name="posted_work">Posted</string>
    <string name="assigned">Assigned</string>
    <string name="running_work">Running</string>
    <string name="checknumberjobpost">Your posts would be within ten!</string>
    <string name="notification_del_job_post">Are you sure you want to delete this work?</string>
    <string name="notification__pass_del_job_post">Your post deleted!</string>
    <string name="evaluate">Evaluate</string>
    <string name="check_number_job_post">Your posts would be within ten!</string>
    <string name="post_your_work">Work detail</string>
    <string name="title_job_post">Title</string>
    <string name="types_of_work">Types of work</string>
    <string name="work_description">Other requests</string>
    <string name="address_job_post">Address</string>
    <string name="enter_the_salary">Enter the amount</string>
    <string name="hourly_pay">Hourly pay</string>
    <plurals name="hour">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <string name="the_start_date">Start date</string>
    <string name="time_of_working">Time</string>
    <string name="to_job_post">to</string>
    <string name="jobs_for_applications">Jobs for applications</string>
    <string name="qua_han_ung_tuyen">Expired to apply</string>
    <string name="dang_cho_xac_nhan">Awaiting confirmation</string>
    <string name="qua_han_xac_nhan">Expired to confirm</string>
    <string name="qua_han">Expired</string>
    <string name="dang_bai">Post</string>
    <string name="update_job_post">Update</string>
    <string name="notification">Notification</string>
    <string name="post_successfully">Post successfully!</string>
    <string name="post_unsuccessfully">Post unsuccessfully!</string>
    <string name="check_your_home_address">Please, double check your home address.</string>
    <string name="check_complete_all_information">Please, complete all information.</string>
    <string name="check_working_time">Working time is unsuitable.</string>
    <string name="detail_posted">Post</string>
    <string name="check_date_post">The date chosen is unsuitable.</string>
    <string name="delete_work_post">Are you sure you want to delete this work?</string>
    <string name="list_recruitment">Applicant list</string>
    <string name="delete_this_work">Delete work</string>
    <string name="work_complete">Completed</string>
    <string name="vnd">VND</string>
    <string name="vnd_hour">VND/hour</string>
    <string name="no_amount">You have not entered the amount</string>
    <string name="validate_amount">Số tiền phải lớn hơn 2000 VND</string>
    <string name="check_address">Please, double check your home address.</string>
    <string name="select_your_applicants">Select your applicants</string>
    <string name="sent_directly">Sent directly</string>
    <string name="done">Just posted</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_next">Next</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_full_name">Full name</string>
    <string name="sign_up_gender">Sex</string>
    <string name="sign_up_age">Age</string>
    <string name="sign_up_phone_number">Phone number</string>
    <string name="sign_up_address">Address</string>
    <string name="sign_up_camera">Camera</string>
    <string name="sign_up_libary_image">Photo libary</string>
    <string name="sign_up_cancel">Cancel</string>
    <string name="sign_up_choice">Choice</string>
    <string name="pro_file_gender_male">Male</string>
    <string name="pro_file_gender_female">Female</string>
    <string name="more_job_statistic">General statistic</string>
    <string name="more_notification">Notification</string>
    <string name="more_languge">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="more_share_app_Gv24">Share NGV247</string>
    <string name="more_follow_Gv24_on_facebook">Follow us on Facebook</string>
    <string name="more_contact">Contact</string>
    <string name="gender_men">Male</string>
    <string name="gender_women">Female</string>
    <string name="signout">Sign out</string>
    <string name="signoutContent">Are you sure to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="share">Share</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="default_language">Default</string>
    <string name="more">More</string>
    <string name="rate">Evaluate</string>
    <string name="completed">Completed</string>
    <string name="to">to</string>
    <string name="send">Send</string>
    <string name="soonupdated">Soon updated!</string>
    <string name="completedjob">Work history</string>
    <string name="completedhelpler">Former partners</string>
    <string name="liabilities">Unpaid work</string>
    <string name="before">%s ago</string>
    <plurals name="day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="second">
        <item quantity="one">second</item>
        <item quantity="other">seconds</item>
    </plurals>
    <string name="unpayalbe">Unpaid</string>
    <string name="notpayment">Unpaid</string>
    <string name="rangetime">Please double check time chosen!</string>
    <string name="worklist">Worklist</string>
    <string name="confirm_the_task_completed">Click "Ok" to confirm the task completed</string>
    <string name="payment">Payment</string>
    <string name="description">DESCRIPTION</string>
    <string name="yourcomment">Add comments</string>
    <string name="doer">DOER</string>
    <string name="comment">Comment</string>
    <string name="recharginginstructions">RECHARGING INSTRUCTIONS</string>
    <string name="huongdannaptien">Recharging instruction</string>
    <string name="naptientructuyen">Recharge online</string>
    <string name="thongtinchuyenkhoan">Remittance information</string>
    <string name="contentrecharge">Moreover, clients can come to the company for a direct remittance.</string>
    <string name="accountinformation">ACCOUNT INFORMATION</string>
    <string name="total">Total expense</string>
    <string name="history_work">Work history</string>
    <string name="waiting_work">Work-in-process</string>
    <string name="post_work">Posted work</string>
    <string name="recharge">Recharge</string>
    <string name="sodutaikhoan">Account balance: </string>
    <plurals name="million">
        <item quantity="one">million</item>
        <item quantity="other">millions</item>
    </plurals>
    <string name="million_zero">million</string>
    <string name="contact">Contact</string>
    <string name="about">About us</string>
    <string name="btnCall">Call</string>
    <string name="btnEmail">Email</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="enter_phonenumber">Enter a phone number</string>
    <string name="okAlert">Ok</string>
    <string name="address_title">Address:</string>
    <string name="GPSTitle">GPS settings</string>
    <string name="GPSContent">GPS is disabled. Do you want to enable GPS?</string>
    <string name="setting">Setting</string>
    <string name="huy">Cancel</string>
    <string name="send_require">Request</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="term_title">Terms of use</string>
    <string name="usename_empty">Please fill in your username</string>
    <string name="emai_empty">Please fill in your email</string>
    <string name="email_wrong">Invalid email address</string>
    <string name="forgot_password_success">A password reset link is sent to your email.</string>
    <string name="forgot_password_failed">Failed! Please double check your email and account.</string>
    <string name="payment_date">Payment date:</string>
    <string name="timework">Time of working:</string>
    <string name="totalprice">Total:</string>
    <string name="accountbalance">Account balance: </string>
    <string name="invoicemumber">Invoice number</string>
    <string name="paymentmethods">PAYMENT METHODS</string>
    <string name="thanhtoanonline">Online payment</string>
    <string name="thanhtoantienmat">Cash payment</string>
    <string name="taikhoanGV24">NGV247 account</string>
    <string name="loading">Loading...</string>
    <string name="dialog_close">Đóng</string>
    <string name="session_timeout">Session timeout</string>
    <string name="txtSendOrderTitle">Online payment</string>
    <string name="thanhtoan">Send</string>
    <string name="complete">Complete</string>
    <string name="txtCheckOrder">CheckOrder</string>
    <string name="txtNameOrder">Full-name</string>
    <string name="txtDescription">Total amount</string>
    <string name="txtEmail">Email</string>
    <string name="txtMobile">Phone number</string>
    <string name="txtAddress">Address</string>
    <string name="txtAmount">Total amount</string>
    <string name="checkInfoPayment">Payment successful! You can review the payment history.</string>
    <string name="error_disconnect">Bạn cần kết nối internet</string>
    <string name="error_name_order">Bạn cần nhập họ tên người thanh toán</string>
    <string name="error_description">Bạn cần nhập mô tả</string>
    <string name="error_email">Bạn cần nhập email người thanh toán</string>
    <string name="error_mobile">Bạn cần nhập số điện thoại người thanh toán</string>
    <string name="error_address">Bạn cần nhập địa chỉ người thanh toán</string>
    <string name="error_amount">The amount must be more than 2000 VND</string>
    <string name="error_01">Lỗi không xác định</string>
    <string name="error_02">merchant_id không tồn tại</string>
    <string name="error_04">checksum không đúng</string>
    <string name="error_05">Không ghi nhận được đơn hàng trên cổng thanh toán</string>
    <string name="error_06">token_code không tồn tại hoặc không hợp lệ</string>
    <string name="error_07">Đơn hàng chưa được thanh toán</string>
    <string name="error_09">receiver_email không tồn tại</string>
    <string name="error_11">receiver_email đang bị khóa hoặc phong tỏa không thể giao dịch</string>
    <string name="error_20">function không đúng</string>
    <string name="choose_age">Choose age</string>
</resources>