<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hbbsolution.owner.history.view.DetailWorkHistoryActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/toolbar_theme">

            <TextView
                android:id="@+id/manager_doing_title_toothbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/more_languge"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="48dp"
        android:background="@color/color_line_view" />

    <RelativeLayout
        android:id="@+id/rela_viet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvVietnamese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/txt_chk_vi"
            android:text="@string/vietnamese"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_large" />

        <com.hbbsolution.owner.base.IconTextView
            android:id="@+id/txt_chk_vi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="top|center"
            android:text="@string/ic_checkmark"
            android:textColor="@color/home_background_history"
            android:textSize="@dimen/icon_size" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_line_view" />

    <RelativeLayout
        android:id="@+id/rela_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/txt_chk_en"
            android:background="@color/colorWhite"
            android:text="@string/english"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_large" />

        <com.hbbsolution.owner.base.IconTextView
            android:id="@+id/txt_chk_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="top|center"
            android:text="@string/ic_checkmark"
            android:textColor="@color/home_background_history"
            android:textSize="@dimen/icon_size" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_line_view" />
</LinearLayout>
